--- a/ChatWave/Profile/templates/profile.html
+++ b/ChatWave/Profile/templates/profile.html
@@ -54,7 +54,12 @@
                             <div class="stat-value">{{ messagecount }}</div>
                             <div class="stat-label">Messagest Sent</div>
                         </div>
-                  
+                        <div class="stat-item">
+                            
+                            <div class="stat-value">{{  datejoined|date:"F j, Y" }}</div>
+                            <div class="stat-label"> Date Joined</div>
+                        </div>
+                       
                     
                     </div>
                 </div>
