--- a/ChatWave/Chat/templates/chat/chat.html
+++ b/ChatWave/Chat/templates/chat/chat.html
@@ -93,20 +93,17 @@
                 <div class="message">
                     <img src={{message.sender.profilePicture}} alt="userimage">
                     <div class="user" id = "{{message.id}}"> <a id="messageUsername" href="{%url 'profile' message.sender.username %}">{{ message.sender.username }} </a>
-                        <div class="timestamp">{{ message.created|date:"h:i A" }}
+                        <div class="timestamp">{{ message.created|date:"h:i A" }}</div>
                             {% if message.message|slice:":23" == "https://media.tenor.com" %}
                             <img src="{{message.message}}" class="gif-image">
+                        </div>
                             {%else%}
                             <h3 class="text-message"> {{ message.message }} </h3>
+                        </div>
                             {%endif%}
                         </div>
                         
-                    </div>
-                   
-
-                
-                    
-                </div>
+                 
 
                
                 {% else %}
@@ -114,19 +111,18 @@
                     <img src="{{request.user.profilePicture}}" alt="userimage">
                     <div class="user" id = "{{message.id}}">You
                         <button class="delete-message"><i class="fas fa-trash"></i></button>
-                        <div class="timestamp">{{ message.created|date:"h:i A" }}
+                        <div class="timestamp">{{ message.created|date:"h:i A" }} </div>
                             {% if message.message|slice:":23" == "https://media.tenor.com" %}
                             <img src="{{message.message}}" class="gif-image">
+                        </div>
                             {%else%}
                             <h3> {{ message.message }} </h3>
+                        </div>
                             {%endif%}
                         </div>
                       
 
-                    </div>
-           
-                   
-                </div>
+                    
 
                 {% endif %}
                 {% endfor %}
